// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`单行图文混排: flex3 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "2019.09.10 22:23:45",
          },
          "children": Array [],
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "已关闭",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img1.png",
              },
              "children": Array [],
              "type": "Image",
            },
          ],
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "超值三周年充值卡",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {},
                  "children": Array [
                    Object {
                      "attrs": Object {
                        "text": "¥1000",
                      },
                      "children": Array [],
                      "type": "Text",
                    },
                    Object {
                      "attrs": Object {
                        "text": "×1",
                      },
                      "children": Array [],
                      "type": "Text",
                    },
                  ],
                  "type": "Block",
                },
              ],
              "type": "Block",
            },
            Object {
              "attrs": Object {
                "text": "鸡肉 400g",
              },
              "children": Array [],
              "type": "Text",
            },
          ],
          "type": "Block",
        },
      ],
      "type": "Block",
    },
    Object {
      "attrs": Object {
        "text": "共1件商品，实付¥1000",
      },
      "children": Array [],
      "type": "Text",
    },
  ],
  "type": "Block",
}
`;

exports[`单行文本: flex0 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "text": "有效期",
      },
      "children": Array [],
      "type": "Text",
    },
    Object {
      "attrs": Object {
        "text": "购买后365天内有效",
      },
      "children": Array [],
      "type": "Text",
    },
  ],
  "type": "Block",
}
`;

exports[`多行图文列表: flex2 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {
        "text": "为您推荐",
      },
      "children": Array [],
      "type": "Text",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img1.png",
              },
              "children": Array [],
              "type": "Image",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下无敌狗啦啦…",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "¥20～¥160",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img3.png",
              },
              "children": Array [],
              "type": "Image",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "大型犬野兽派洗剪吹A套餐",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "¥20～¥75",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img2.png",
              },
              "children": Array [],
              "type": "Image",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "大型犬只野兽派洗剪吹，凶悍大叔专业洗狗12年，洗遍天下狗",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "¥20～¥160",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "src": "./img/img4.png",
              },
              "children": Array [],
              "type": "Image",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "小型犬洗剪吹B套餐",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "¥20～¥75",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "type": "Block",
        },
      ],
      "extraInfo": Object {
        "sameNode": true,
      },
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "更多服务/商品",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "type": "Block",
    },
  ],
  "type": "Block",
}
`;

exports[`多行文本: flex1 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [],
          "type": "Block",
        },
        Object {
          "attrs": Object {
            "text": "卡项权益",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "美容服务",
              },
              "children": Array [],
              "type": "Text",
            },
            Object {
              "attrs": Object {
                "text": "×10",
              },
              "children": Array [],
              "type": "Text",
            },
          ],
          "type": "Block",
        },
        Object {
          "attrs": Object {
            "text": "凶悍大叔洗澡",
          },
          "children": Array [],
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "温柔小姐姐做造型",
          },
          "children": Array [],
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "精油美毛",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {
            "text": "清洁服务",
          },
          "children": Array [],
          "type": "Text",
        },
        Object {
          "attrs": Object {
            "text": "×10",
          },
          "children": Array [],
          "type": "Text",
        },
      ],
      "type": "Block",
    },
    Object {
      "attrs": Object {
        "text": "凶悍大叔洗澡",
      },
      "children": Array [],
      "type": "Text",
    },
    Object {
      "attrs": Object {
        "text": "温柔小姐姐做造型",
      },
      "children": Array [],
      "type": "Text",
    },
  ],
  "type": "Block",
}
`;

exports[`多行重复文字: flex4 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "text": "充值卡",
              },
              "children": Array [],
              "type": "Text",
            },
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "src": "./img/img1.png",
                  },
                  "children": Array [],
                  "type": "Image",
                },
                Object {
                  "attrs": Object {
                    "text": "更多充值卡",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "type": "Block",
        },
      ],
      "type": "Block",
    },
    Object {
      "attrs": Object {},
      "children": Array [
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "黑金VIP黄金卡",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "¥8848",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "永久有效",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "type": "Block",
        },
        Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "text": "粉丝珍爱卡",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "¥800",
                  },
                  "children": Array [],
                  "type": "Text",
                },
                Object {
                  "attrs": Object {
                    "text": "365天内有效",
                  },
                  "children": Array [],
                  "type": "Text",
                },
              ],
              "type": "Block",
            },
          ],
          "type": "Block",
        },
      ],
      "type": "Block",
    },
  ],
  "type": "Block",
}
`;
